🐞 Fix editor visibility

--- a/src/Pages/CodePlayground/Playground.scss
+++ b/src/Pages/CodePlayground/Playground.scss
@@ -59,6 +59,7 @@
       height: 80px;
       background: #fff;
       padding: 10px;
+      margin-top: 10px;
     }
   }
 }
